--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,11 @@ plugins {
     id 'kotlin-kapt'
 }
 
+import com.bert.plugin.GreetingPlugin
+//Apply the plugin
+apply plugin: GreetingPlugin
+
+
 android {
     compileSdk 31
 
